Change Log:
This file contains the change log. The changes are marked with the following symbology.

+ for a new feature
- for a removed feature
* for a modified feature or a bugfix

-----------------
Current version
* Fixed  issue 29 : KDE settings file was not found on KDE4. This is solved now.
* Fixed  issue 25 : Disabled DTD and schema validation in settings parsers.

20120920
* Improved the fix for issue 26 PAC download recursion bug

20120905
* Fixed  issue 26 : Implemented (hopefully) better fix for PAC download recursion bug 
* Fixed  issue 27 + 22 : JavaProxySearch was used always even if no http.proxyHost property was set.

20120727
* Fixed  issue 19 : Added check to return null if no KDE settings are available.
* Fixed  issue 20 : Fix in isInNet method. Resolve host names to IP addresses.
* Fixed  issue 21 : Improved handling of empty/invalid URIs

20111102
* Fixed  issue 14 : Added code to cleanup temporary dll files that were not deleted on VM exit.
* Fixed  issue 18 : Added code to support the https.proxy system properties too.
* Fixed  issue  9 : IE PAC file urls are now patched to be in line with Firefox URLs.
+ Added support for automatic retry if PAC returns a list of fallback proxies.
+ Started to implement IPv6 support

20110515
+ Added (experiemental) support for Max OSX. This is not very well tested yet but should work. 
+ Fixed  issue 15 : The Firefox proxy search lacked support for socks proxy. This is now available.
* Fixed  issue 12 : The PAC JavaScript method isInNet did not work for all patterns. This is fixed now.

20110210
* Fixed issue 11: Parsing was unreliable when a PAC script returned more than one proxy 
* Some code cleanup to fix some minor problems (platform detection issues and others) 
+ Added a debug system property "com.btr.proxy.pac.overrideLocalIP" for the PAC parser 
+ Added Support for the IE "Bypass Proxy Server for local addresses" feature

20100914